Mon Jul 15 10:14:44 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* bin/MakeProjectCreator/README:
	  Fixed typo

Sun Jul 14 20:14:16 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* FAQ: Fixed the use of "*.ps.gz" files.  Thanks to 
	  Carol Hunsicker <carol.hunsicker@lmco.com> for pointing this
 	  out.

Sun Jul 14 01:55:03 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Message_Block.i (reset_allocators): Reset the allocators in
	  the chain if the message block is chained.

Sun Jul 14 01:43:32 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Message_Block.h:
	* ace/Message_Block.i: Added two methods viz. reset_allocators ()
	  and access_allocators () to ACE_Message_Block. 

Sat Jul 13 17:29:35 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/fuzz.pl: Removed the word "warning" from a print statement,
	  since our scoreboard scripts seems to catch that as a warning. 

Sat Jul 13 13:31:54 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the Stack_Recursion test to the
	  daily  builds.

Fri Jul 12 20:28:52 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/URL_Addr.cpp (string_to_addr):

          Fixed confusion in handling normal and wchar strings. It should
          compile now without problems.

        * ACEXML/apps/svcconf/Svcconf_Handler.cpp:
        * ACEXML/apps/svcconf/Svcconf_Handler.i:

          Fixed memory leaks, some typos and used the locator to print
          out error messages.

Fri Jul 12 17:55:08 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* ace/String_Base.i:
	  Fixed rfind() to check for pos == npos also, that solved the
	  regression test failures.

Fri Jul 12 16:03:22 2002  Steve Huston  <shuston@riverace.com>

        * ace/Basic_Types.h: Itanium is little-endian, like x86. Although
          the Itanium architecture allows big-endian operation, Windows
          doesn't use it.
